newclay/test/Compiler/Propagation/Fail/ReturnStatementWithNamedReturns/main.clay
main() --> r:Int {
    return 1;
}
